--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A social media website with popular features like a user can post, comment, like, follow, chat, and do more."
     />
     <title>Codeial</title>
   </head>
